authorization doctor and nurse

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,3 +3,4 @@ Duplicate.userForm.email=Such email already exists
 Size.userForm.password=Password must be over 8 characters
 Different.userForm.password=Password doesn't match
 Invalid.userForm.email=Invalid form email
+Check.userForm.identKey=Undefined Identification key for role
