--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -3,3 +3,4 @@ Duplicate.userForm.email=Пользователь с такой почтой уже зарегистрирован
 Size.userForm.password=Размер пароль не верный
 Different.userForm.password=Пароли не совпадают
 Invalid.userForm.email=Неверная форма почты
+Check.userForm.identKey=Ключ роли не определен.
