--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,6 +1,14 @@
-Required=This field is required
-Duplicate.userForm.email=Such email already exists
-Size.userForm.password=Password must be over 8 characters
-Different.userForm.password=Password doesn't match
-Invalid.userForm.email=Invalid form email
+Different.userForm.password=Passwords don't match
 Check.userForm.identKey=Undefined Identification key for role
+Check.event.comment=Add some comment for cancelled event
+Check.patient.healthInsurance=Health Insurance must be greater than 0
+Check.appointment.dosage=Add dosage for medicine
+CheckAmount.appointment.dosage=Dosage must be greater than 0
+Check.appointment.endDate=may not be null
+Verify.appointment.startDate=Start Date can't be earlier than Today
+Verify.appointment.endDate=End Date must be after Start Date
+Check.appointment.startDate=may not be null
+Check.appointment.treatmentDTO.name=may not be null
+Check.appointment.days=Select days pattern
+Check.appointment.time=Select time pattern
+CheckPattern.appointment.days=Select another days pattern
