pagination, message sender

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -11,4 +11,4 @@ Check.appointment.startDate=may not be null
 Check.appointment.treatmentDTO.name=may not be null
 Check.appointment.days=Select days pattern
 Check.appointment.time=Select time pattern
-CheckPattern.appointment.days=Select another days pattern
+CheckPattern.appointment.days=No events were created. Select another days pattern
