add java doc, edit tests, change UI

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,5 +1,6 @@
 Different.userForm.password=Passwords don't match
 Check.userForm.identKey=Undefined Identification key for role
+Equals.userForm.email=This e-mail is already registered
 Check.event.comment=Add some comment for cancelled event
 Check.patient.healthInsurance=Health Insurance must be greater than 0
 Check.appointment.dosage=Add dosage for medicine
@@ -12,3 +13,4 @@ Check.appointment.treatmentDTO.name=may not be null
 Check.appointment.days=Select days pattern
 Check.appointment.time=Select time pattern
 CheckPattern.appointment.days=No events were created. Select another days pattern
+Verify.appointment.treatmentDTO.name=There is no such treatment. Choose another one
